# sdl-tutorials

./: .gitignore  CMakeLists.txt  CMakePresets.json
sdl2-tutorials/01-Setup/: CMakeLists.txt  application.cpp  application.h  sdl2-main.cpp
sdl2-tutorials/01-Window/: CMakeLists.txt  sdl2-window.cpp
sdl2-tutorials/02-Sprite/: CMakeLists.txt  application.cpp  application.h  sdl2-main.cpp  sdl2-sprite.cpp
sdl2-tutorials/03-Game-Loop/: CMakeLists.txt  application.cpp  application.h  sdl2-main.cpp  sprite.h
sdl2-tutorials/03-Input/: CMakeLists.txt  application.cpp  application.h  sdl2-main.cpp  sprite.h
sdl2-tutorials/04-Input/: application.cpp
sdl2-tutorials/99-UI/: CMakeLists.txt  application.cpp  application.h  ui.h
